--- a/The_Corporate/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/The_Corporate/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -126,16 +126,16 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",BufferVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/office
-MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem0=/Game/blockout_tool/map_office
+MRUItem1=/Game/office
+MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [/Script/UnrealEd.MaterialEditorOptions]
-bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/blockout_tool
 ContentBrowserTab2.SourcesExpanded=False
 ContentBrowserTab2.Locked=False
 ContentBrowserTab2.VerticalSplitter.SlotSize0=0.250000
@@ -180,7 +180,7 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/office
+LastLevel=/Game/blockout_tool/map_office
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -280,6 +280,21 @@ Actor.Rendering=True
 Actor.Replication=True
 Actor.Collision=True
 Actor.Actor=True
+PreviewMaterial.Hololens=True
+Blockout_Doorway_C.TransformCommon=True
+Blockout_Doorway_C.Blockout Tools=True
+Blockout_Doorway_C.Rendering=True
+Blockout_Doorway_C.Replication=True
+Blockout_Doorway_C.Collision=True
+Blockout_Doorway_C.Input=True
+Blockout_Doorway_C.Actor=True
+Blockout_Box_C.TransformCommon=True
+Blockout_Box_C.Blockout Tools=True
+Blockout_Box_C.Rendering=True
+Blockout_Box_C.Replication=True
+Blockout_Box_C.Collision=True
+Blockout_Box_C.Input=True
+Blockout_Box_C.Actor=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -398,6 +413,11 @@ bConvertSceneUnit=False
 LastLogListing=LightingResults
 
 [PlacementMode]
+RecentlyPlaced=/BlockoutToolsPlugin/Blueprints/Blockout_Box.Blockout_Box;
+RecentlyPlaced=/BlockoutToolsPlugin/Blueprints/Blockout_Doorway.Blockout_Doorway;
+RecentlyPlaced=/Game/BankBuilding/Meshes/SM_MBuilding04_FirstFloor_Corner.SM_MBuilding04_FirstFloor_Corner;
+RecentlyPlaced=/Game/BankBuilding/Meshes/SM_MBuilding04_FirstFloor_A.SM_MBuilding04_FirstFloor_A;
+RecentlyPlaced=/Game/BankBuilding/Meshes/SM_MBuilding04_InnerFFDoorWall_A.SM_MBuilding04_InnerFFDoorWall_A;
 RecentlyPlaced=/Game/StarterContent/Architecture/Wall_500x500.Wall_500x500;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Ceramic_Tile_Checker.M_Ceramic_Tile_Checker;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
@@ -407,9 +427,12 @@ RecentlyPlaced=/Game/ThirdPersonBP/cm/model_Skeleton.model_Skeleton;
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/office
-MRUItem1=/Game/ThirdPersonBP/cm/glasses
-MRUItem2=/Game/ThirdPersonBP/cm/glasses_12_Color_256
+MRUItem0=/Game/blockout_tool/map_office
+MRUItem1=/Game/BankBuilding/Materials/M_MBuilding04_FirstFloor_C_Inner
+MRUItem2=/Game/BankBuilding/Materials/M_MBuilding04_FirstFloor_C
+MRUItem3=/Game/office
+MRUItem4=/Game/ThirdPersonBP/cm/glasses
+MRUItem5=/Game/ThirdPersonBP/cm/glasses_12_Color_256
 
 [MaterialEditor]
 PrimType=1
@@ -471,7 +494,7 @@ bMaterialQualityUsed[3]=0
 
 [RootWindow]
 ScreenPosition=X=119.200 Y=48.000
-WindowSize=X=1288.000 Y=728.000
+WindowSize=X=1289.600 Y=729.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -488,7 +511,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/shres/Documents/GitHub/the-corporate/The_Corporate/Content
+UNR=../../../../../../Users/shres/Documents/GitHub/the-corporate/The_Corporate/Content/blockout_tool
 BRUSH=../../../../../../Users/shres/Documents/Unreal Projects/The_Corporate/Content/
 FBX=../../../../../../Users/shres/Documents/Unreal Projects/The_Corporate/Content/
 FBXAnim=../../../../../../Users/shres/Documents/Unreal Projects/The_Corporate/Content/
@@ -1402,6 +1425,7 @@ InstalledPlugins=BlockoutToolsPlugin
 InstalledPlugins=LPSPSample
 InstalledPlugins=Substance
 InstalledPlugins=WeatherSystem
+InstalledPlugins=PhysicalLayout
 InstalledPlugins=XRVisualization
 
 [LightingBuildOptions]
@@ -1422,4 +1446,12 @@ SingleInstantiationPlacementMode=0
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
+Material="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
+MaterialInterface="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
+Object=
+
+[AssetEditorToolkitTabLocation]
+/Game/BankBuilding/Materials/M_MBuilding04_FirstFloor_C.M_MBuilding04_FirstFloor_C=1
+/Game/BankBuilding/Materials/M_MBuilding04_FirstFloor_C_Inner.M_MBuilding04_FirstFloor_C_Inner=1
 
