--- a/The_Corporate/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/The_Corporate/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -135,7 +135,7 @@ bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/blockout_tool
+ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Architecture
 ContentBrowserTab2.SourcesExpanded=False
 ContentBrowserTab2.Locked=False
 ContentBrowserTab2.VerticalSplitter.SlotSize0=0.250000
@@ -180,7 +180,7 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/blockout_tool/map_office
+LastLevel=/Engine/Maps/Templates/Template_Default
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -295,6 +295,12 @@ Blockout_Box_C.Replication=True
 Blockout_Box_C.Collision=True
 Blockout_Box_C.Input=True
 Blockout_Box_C.Actor=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -413,14 +419,20 @@ bConvertSceneUnit=False
 LastLogListing=LightingResults
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Architecture/Floor_400x400.Floor_400x400;
+RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/StarterContent/Materials/M_Ceramic_Tile_Checker.M_Ceramic_Tile_Checker;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Basic_Wall.M_Basic_Wall;
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/StarterContent/Materials/M_AssetPlatform.M_AssetPlatform;
+RecentlyPlaced=/Game/StarterContent/Architecture/Pillar_50x500.Pillar_50x500;
+RecentlyPlaced=/Game/StarterContent/Architecture/Wall_Door_400x400.Wall_Door_400x400;
 RecentlyPlaced=/BlockoutToolsPlugin/Blueprints/Blockout_Box.Blockout_Box;
 RecentlyPlaced=/BlockoutToolsPlugin/Blueprints/Blockout_Doorway.Blockout_Doorway;
 RecentlyPlaced=/Game/BankBuilding/Meshes/SM_MBuilding04_FirstFloor_Corner.SM_MBuilding04_FirstFloor_Corner;
 RecentlyPlaced=/Game/BankBuilding/Meshes/SM_MBuilding04_FirstFloor_A.SM_MBuilding04_FirstFloor_A;
 RecentlyPlaced=/Game/BankBuilding/Meshes/SM_MBuilding04_InnerFFDoorWall_A.SM_MBuilding04_InnerFFDoorWall_A;
 RecentlyPlaced=/Game/StarterContent/Architecture/Wall_500x500.Wall_500x500;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Ceramic_Tile_Checker.M_Ceramic_Tile_Checker;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/ThirdPersonBP/cm/model_Skeleton.model_Skeleton;
 
 [SelectionDetails]
@@ -494,7 +506,7 @@ bMaterialQualityUsed[3]=0
 
 [RootWindow]
 ScreenPosition=X=119.200 Y=48.000
-WindowSize=X=1289.600 Y=729.600
+WindowSize=X=1292.800 Y=732.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
